src/test/resources/de/monticore/umlcd4a/cocos/mcg/valid/CD4AC2001.cd
package de.monticore.umlcd4a.cocos.mcg.valid;

classdiagram CD4AC2001 {
  interface A {
    static String a;
    static private String a;
  }
}