src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/C4A51.cd
package de.monticore.umlcd4a.cocos.mcg.invalid;

classdiagram C4A51 {
  interface A {
    String a;
    private String b;
    protected String c;
    public String d;
    final String e;
    derived String f;
  }
}
